# Unified-NTT-FFT

./: CMakeLists.txt  README.md  fft_bfu_bench.cu  ntt256_full.cu  ntt256_mont_const.cu
build_fft/: CMakeCache.txt  Makefile  cmake_install.cmake  run_fft  run_ntt
build_fft512/: CMakeCache.txt  Makefile  cmake_install.cmake  run_fft  run_ntt
build_ntt/: CMakeCache.txt  Makefile  cmake_install.cmake  run_fft  run_ntt
build_ntt256/: CMakeCache.txt  Makefile  cmake_install.cmake  run_fft  run_ntt
include/: bfu.hpp  config.hpp  device_tables.hpp  reference_cpu.hpp  types.hpp
src/: host_precompute.cpp  kernels.cu  main_fft.cpp  main_ntt.cpp  reference_cpu.cpp
